# envelope-buddy

./: .env.example  .gitignore  Cargo.toml  Cross.toml  DEEP_INSPECTION_REPORT.md  DEPLOYMENT_READINESS.md  DESIGN.md  DESIGN_V2.md  Makefile.toml  README.md  config.toml
.cargo/: config.toml
src/: bot.rs  cache.rs  commands.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  test_utils.rs
src/bot/: mod.rs
src/bot/commands/: envelope.rs  general.rs  mod.rs  product.rs  transaction.rs
src/bot/handlers/: autocomplete.rs  mod.rs
src/commands/: envelope.rs  general.rs  manage.rs  mod.rs  product.rs  transaction.rs  utils.rs
src/config/: database.rs  envelopes.rs  mod.rs  users.rs
src/core/: envelope.rs  mod.rs  monthly.rs  product.rs  report.rs  transaction.rs
src/db/: connection.rs  envelopes.rs  mod.rs  products.rs  schema.rs  system_state.rs  test_utils.rs  transactions.rs
src/entities/: envelope.rs  mod.rs  product.rs  system_state.rs  transaction.rs
