# Cargo.toml - V2 dependencies
[package]
name = "envelope-buddy"
version = "0.2.0"
edition = "2024"

[dependencies]
# Core dependencies
sea-orm = { version = "1.1.16", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
poise = "0.6.1"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "2.0.16"
dotenvy = "0.15.7"
toml = "0.8.20"

# Future API dependencies (commented out for now)
# axum = { version = "0.7", features = ["macros"] }
# tower = "0.4"
# tower-http = { version = "0.5", features = ["cors"] }
