[package]
name = "envelope-buddy"
version = "0.2.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
dotenvy = "0.15"

serenity = "0.12.3"
sea-orm = { version = "1.1.17", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
poise = "0.6.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
chrono = { version = "0.4.38", features = ["serde"] }
